# LLVM_Learning-calc_compiler

./: .gitignore  CMakeLists.txt  Readme.md  Readmi.md  _build_project.bat  _install_project.bat
Antlr_parser/: CMakeLists.txt  calc_antlr.g4  calc_antlrAstVisitor.cpp  calc_antlrAstVisitor.h  calc_antlrLexerRules.g4  gen_code.bat  main.cpp
Antlr_parser/.antlr/: calc_antlrLexer.interp  calc_antlrLexer.java  calc_antlrLexerRules.java  calc_antlrParser.java  myLanguage.interp  myLanguageLexer.java  myLanguageLexer.tokens  myLanguageLexerRules.interp  myLanguageLexerRules.java  myLanguageLexerRules.tokens  myLanguageParser.java
Antlr_parser/calc_antlrCore/: calc_antlrBaseListener.cpp  calc_antlrBaseListener.h  calc_antlrBaseVisitor.cpp  calc_antlrBaseVisitor.h  calc_antlrLexer.cpp  calc_antlrLexer.h  calc_antlrListener.cpp  calc_antlrListener.h  calc_antlrParser.cpp  calc_antlrParser.h  calc_antlrVisitor.cpp  calc_antlrVisitor.h
Antlr_parser/ext/antlr/: antlr4-runtime.exp  antlr4-runtime.lib
Antlr_parser/test_files/: test.myLan
src/: AST.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Sema.cpp  Sema.h  Token.h  _main.cpp  runtime.c
templates/: _calc_antlr_prepare.bat  _calc_antlr_test.bat  _calc_prepare.bat  _compile.bat
tools/: _test_calc.bat  _test_compile.bat  _test_prepare.bat
